--- a/style.css
+++ b/style.css
@@ -8,13 +8,14 @@ h1{
 .orange-color{
     color: orange;
 }
-section{
+.flexible-container{
     display: flex;
    margin-bottom: 100px; 
 }
 .half-width{
     width: 50%;
     padding-left: 2%;
+   
 }
 .half-width img{
     width: 80%;
@@ -35,5 +36,32 @@ section{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
-
+}
+.experience-item{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+    
+}
+.experience-item{
+    width: 40%;
+   margin-left: 5%;
+   margin-right: 5%;
+   padding-left: 40px;
+   border-radius: 10px;
+   box-shadow: 10px 10px 40px yellowgreen;
+   
+}
+#Web-dev-experience{
+    border-left: 7px solid;
+    border-image: linear-gradient(blue, cyan);
+    border-image-slice: 1;
+}
+#full-Stack-experience{
+    order-left: 7px solid;
+    border-image: linear-gradient(blue, cyan);
+    border-image-slice: 1;
+}
+fotter p{
+    text-align: center;
 }
